# test

./: CMakeLists.txt  Chat2_0.cpp  ChatOnC++.cpp  GenerationFile.cpp  Hash.rar  LoggerModule27.cpp  Module28.cpp  Module29.cpp  Module32.cpp  Module34.cpp  README.md  StartModule27.cpp  Trie.cpp  Trie.h  client.cpp  databasehandler.cpp  databasehandler.h  graph.cpp  iskperiodic.cpp  linux2.cpp  main.cpp  module26.cpp  revisionModule29.cpp  server.cpp  serveradmin.cpp  serveradmin.h  servergui.cpp  servergui.h  sql.txt
.github/workflows/: cleaning.yml  final-project.yml
